manifests/g3bookstoreserver/templates/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-transcorder
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: "g3bookstoreserver"
  configPatches:
## TODO(taoxuy@): enable transcoder. Currently the descriptor is too large(> 1MB) so
## the descriptor cannot be passed as k8s config.
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.grpc_json_transcoder
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
          protoDescriptor: "/configs/inputs/descriptors.pb"
          services:
          - endpoints.examples.bookstore.Bookstore
          print_options:
            add_whitespace: true
            always_print_primitive_fields: true
            always_print_enums_as_ints: false
            preserve_proto_field_names: false
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
          value:
            message_timeout:
              seconds: "10"
            processing_mode:
              request_header_mode: SEND
              request_body_mode: BUFFERED_PARTIAL
            grpc_service:
              timeout:
                seconds: 10
              google_grpc:
                target_uri: resourceextractor-resource-extractor.resourceextractor.svc.cluster.local:3443
                stat_prefix: waap
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          grpc_service:
            google_grpc:
              target_uri: extauthzserver.extauthzserver.svc.cluster.local:9000
              stat_prefix: streams_total
          transport_api_version: V3
          clear_route_cache: true
